# digital-menu-boards

./: .gitmodules  README.md  docker-compose.yaml
django-backend/: .my_pgpass  pyproject.toml
django-backend/app/: db.sqlite3
django-backend/app/app/: admin.py  app.code-workspace  models.py  serializers.py  settings.py  urls.py  views.py
django-backend/app/app/migrations/: 0001_initial.py  0002_rename_flavors_flavor.py  0003_screenview_flavor_in_stock_flavor_is_assigned.py  0004_location_flavor_created_at_flavor_created_by_and_more.py  0005_alter_flavor_created_at_alter_flavor_modified_at_and_more.py  0006_alter_flavor_created_at_alter_flavor_modified_at.py
django-backend/tests/: test_django_backend.py
dmb-go-backend/: README.md  hello.go
dmb-go-backend/templates/: index.html
dmb-node-frontend/: package-lock.json
dmb-node-frontend/components/: GetFlavors.tsx
dmb-node-frontend/pages/test/: index.tsx
go-backend/: .dockerignore  Dockerfile  authTest.go  go.mod  go.sum  hello.go  sample.db
go-backend/SQL/: 01-flavors.sql
node-frontend/: Dockerfile  package-lock.json  package.json  types.tsx
node-frontend/components/: BasicTable.tsx  FlavorTable.tsx  GetFlavors.tsx  GetLocations.tsx  GetScreenViews.tsx  GetScreens.tsx  LocationsTable.tsx  ScreenTable.tsx  ScreenViewTable.tsx
node-frontend/components/dialogues/: CreateFlavor.tsx  CreateLocation.tsx  CreateScreen.tsx  CreateScreenView.tsx  DeleteFlavor.tsx  DeleteLocation.tsx  DeleteScreen.tsx  DeleteScreenView.tsx  EditFlavor.tsx  EditLocation.tsx  EditScreen.tsx  (+1 more)
node-frontend/pages/: index.tsx
(+1 files in other folders)
